--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="brand">
             <a href="#home">
-                <img src="./assets/logo.png" alt="Kratki Metar">
+                <img src="./assets/logo.png" alt="Logo">
             </a>
         </div>
         
