--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     
     <link rel="stylesheet" href="https://use.typekit.net/qzj8jzj.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="preload" as="image" href="/assets/Home.jpg">
-    <link rel="preload" as="image" href="/assets/logo.png">
+    <link rel="preload" as="image" href="assets/Home.jpg">
+    <link rel="preload" as="image" href="assets/logo.png">
 </head>
 <body>
     <div class="parallax-bg"></div>
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <div class="brand">
             <a href="#home">
-                <img src="./assets/logo.png" alt="Logo">
+                <img src="assets/logo.png" alt="Logo">
             </a>
         </div>
         
