--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     
     <link rel="stylesheet" href="https://use.typekit.net/qzj8jzj.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="preload" as="image" href="./assets/Home.jpg">
+    <link rel="preload" as="image" href="home-bg.jpg">
+    <link rel="preload" as="image" href="about-bg.jpg">
 </head>
 <body>
     <div class="parallax-bg"></div>
@@ -16,7 +17,7 @@
     <nav class="navbar">
         <div class="brand">
             <a href="#home">
-                <img src="./assets/logo.png" alt="Kratki Metar">
+                <img src="logo.png" alt="Kratki Metar">
             </a>
         </div>
         
