--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         </ul>
     </nav>
 
+    <!-- Test images first -->
+    <img src="assets/home-bg.jpg" alt="Test Home Image" style="width: 100px; height: 100px;">
+    <img src="assets/about-bg.jpg" alt="Test About Image" style="width: 100px; height: 100px;">
+
+    <!-- Then your regular sections -->
     <section id="home">
         <img src="assets/home-bg.jpg" alt="Home Background" class="bg-image">
         <div class="content">
