--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     
     <link rel="stylesheet" href="https://use.typekit.net/qzj8jzj.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="preload" as="image" href="./assets/Home.jpg">
+    <link rel="preload" as="image" href="./assets/home-bg.jpg">
+    <link rel="preload" as="image" href="./assets/about-bg.jpg">
 </head>
 <body>
     <div class="parallax-bg"></div>
