--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000000">
     <title>Kratki Metar</title>
-    
     <link rel="stylesheet" href="https://use.typekit.net/qzj8jzj.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="preload" as="image" href="./assets/Home.jpg">
+    <link rel="shortcut icon" href="./assets/logo.ico" type="image/x-icon">
 </head>
 <body>
     <div class="parallax-bg"></div>
